pciutils: enable sanitizers for runtime checks
NOTE: I don't recommend committing this to the main repo by default.

It was useful to be able to run with the sanitizers enabled
to check for leaks and other odd behavior that other tools
don't catch.

Signed-off-by: Jesse Brandeburg <jesse.brandeburg@intel.com>

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -120,7 +120,7 @@ dllrsrc.o: dllrsrc.rc
 	$(WINDRES) --input=$< --output=$@ --input-format=rc --output-format=coff
 OBJS += dllrsrc
 endif
-CFLAGS += -fPIC -fvisibility=hidden
+CFLAGS += -fPIC -fvisibility=hidden -Wextra -Wall -fsanitize=address,undefined
 $(PCILIB): $(addsuffix .o,$(OBJS))
 	$(CC) -shared $(CFLAGS) $(LDFLAGS) $(PCILIB_LDFLAGS) -o $@ $^ $(LIB_LDLIBS)
 ifeq ($(LIBEXT),dll)
